JBRULES-2829 avoid StackOverflowError when building
git-svn-id: https://svn.jboss.org/repos/labs/labs/jbossrules/trunk@36397 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70